--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,18 +5,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tech Blog</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="/stylesheets/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <div class="wrapper">
-      <nav class="nav">
-          <a href="">Home</a>
-          <a href="">Dashboard</a>
-          <a href="">Login</a>
-          <a href="">Logout</a>
+  <div>
+    <nav class="float-right">
+          <a href="/">Home</a>
+          {{#if loggedIn}}
+          <a href="/dashboard">Dashboard</a>
+          <button id="logout" class="btn-no-style">Logout</button>
+          {{else}}
+          <a href="/signup">Sign Up</a>
+          <a href="/login">Login</a>
+          {{/if}}
       </nav>
+  </div>
+  <div class="wrapper">
     <header>
       <h1>
        Tech Blog
@@ -29,6 +36,9 @@
       Thanks for visiting!
     </footer>
   </div>
+  {{#if loggedIn}}
+  <script src="/javascript/logout.js"></script>
+  {{/if}}
 
 </body>
 
