--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,15 +1,19 @@
-<form class="login-form">
+<div class="row login-form">
+    <form class="login-form">
+      <h2>Log In</h2>
     <div>
-        <label for="email-login">email:</label>
-        <input type="text" id="email-login" />
+      <label for="email-login">email:</label>
+      <input type="text" id="email-login" />
     </div>
     <div>
-        <label for="password-login">password:</label>
-        <input type="password" id="password-login" />
+      <label for="password-login">password:</label>
+      <input type="password" id="password-login" />
     </div>
     <div>
-        <button type="submit">login</button>
+      <button id="submit" class="submit" type="submit">login</button>
     </div>
-</form>
+    <p><a href="/signup">Sign Up</a></p>
+  </form>
+</div>
 
-<script src="/javascript/login.js"></script>
+<script src="./javascript/login.js"></script>
